# toolspec-schema

./: README.md  pyproject.toml
docs/: SPEC_REFERENCE.md
src/bioledger_toolspec_schema/: __init__.py  containers.py  index.py  load.py  models.py  store.py  validate.py
