[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bioledger-toolspec-schema"
version = "0.1.0"
description = "Pydantic schema, YAML loader, and validator for the BioLedger tool spec format"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10,<3",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bioledger_toolspec_schema"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
